# torch-distributions

./: AUTHORS.txt  CMakeLists.txt  Gemfile  LICENSE.txt  README.md  cauchy.lua  chi2.lua  distributions-0-0.rockspec  gaussian.lua  generateDocsAndTests.py  index.html  init.lua  laplace.lua  multivariateGaussian.lua  nonC.lua  poisson.lua  randomkit-0-0.rockspec  randomkit.html  statisticalTests.lua  testing.markdown  wrapC.lua
distributions/: CMakeLists.txt  categorical.lua  chi2test.lua  dirichlet.lua  gaussian.lua  init.lua  kstest.lua  laplace.lua  multivariateGaussian.lua  mvcat.lua  normalWishart.lua  poisson.lua  wishart.lua
distributions/benchmarks/: benchmarkCategorical.lua
distributions/tests/: testCategorical.lua  testChi2.lua  testChi2Test.lua  testGaussian.lua  testKSTest.lua  testMultivariateGaussian.lua  testMultivariateValues.lua  testNormalWishart.lua  testWishart.lua
doc/: randomkitExtra.markdown
doc/html/: index.html  testing.html
doc/src/: README.DOC.markdown  _config.yml  index.markdown  params.json  (+3 more)
hooks/: post-merge  pre-commit
luasrc/: CMakeLists.txt  categorical.lua  cauchy.lua  chi2.lua  dirichlet.lua  gamma.lua  gaussian.lua  generateDocsAndTests.py  init.lua  kstest.lua  laplace.lua  multivariateGaussian.lua  mvcat.lua  normalWishart.lua  poisson.lua  statisticalTests.lua  util.lua  wishart.lua  wrapC.lua
randomkit/: CMakeLists.txt  README  randomkit.c
stylesheets/: styles.css  toc.css
tests/: testCalls.lua  testCauchy.lua  testGaussian.lua  testLaplace.lua  testMultivariateGaussian.lua  testPoisson.lua  testValues.lua
(+23 files in other folders)
